# hvac

./: .bumpversion.cfg  .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  .travis.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.md.txt  codecov.yaml  codecov.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-parser.in  requirements-parser.txt  requirements.in  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  vault.hcl
.github/: CODEOWNERS  FUNDING.yml  config.yml  release-drafter.yml
.github/workflows/: build-test.yml  docs-pr.yml  lint-and-test.yml  python-package.yml  python-publish.yml  release-drafter.yml  release.yml
ci/: start-vault-dev.sh
docs/: Makefile  advanced_usage.rst  build.sh  conf.py  index.rst  overview.rst  requirements.in  requirements.txt  source_reference.rst  usage.rst
docs/contrib/: index.rst  niquests_http2.rst
docs/examples/: approle_auth_method.rst  audit.rst  aws.rst  examples.rst  gcp.rst  ldap_auth_method.rst  sys.rst  system_backend.rst  token_auth_method.rst
docs/ext/: doctest.py  hvac_doctest.py
docs/source/: hvac.rst  hvac_adapters.rst  hvac_api.rst  hvac_api_auth.rst  hvac_api_auth_methods.rst  hvac_api_azure.rst  hvac_api_secrets_engines.rst  hvac_api_system_backend.rst  hvac_api_wrappers.rst  hvac_aws_utils.rst  hvac_exceptions.rst  hvac_utils.rst  hvac_v1.rst  index.rst
docs/usage/: github.rst  index.rst  kubernetes_auth_method.rst  ldap.rst  ldap_auth_method.rst  mfa.rst  system_backend.rst  usage.rst
docs/usage/auth_methods/: approle.rst  aws.rst  azure.rst  gcp.rst  github.rst  index.rst  jwt-oidc.rst  kubernetes.rst  ldap.rst  legacymfa.rst  mfa.rst  okta.rst  token.rst  userpass.rst
docs/usage/secrets_engines/: activedirectory.rst  aws.rst  azure.rst  database.rst  gcp.rst  identity.rst  index.rst  kv.rst  kv_v1.rst  kv_v2.rst  ldap.rst  pki.rst  totp.rst  transform.rst  transit.rst
docs/usage/system_backend/: audit.rst  auth.rst  custom_messages.rst  health.rst  index.rst  init.rst  key.rst  leader.rst  lease.rst  mount.rst  namespace.rst  passwordpolicy.rst  policies.rst  policy.rst  quota.rst  raft.rst  seal.rst  tools.rst  wrapping.rst
docs/usage/wrappers/: azure.rst  gcp.rst  index.rst  kv.rst
hvac/: __init__.py  adapters.py  aws_utils.py  cli.py  exceptions.py  proxy.py  token_cache.py  utils.py
hvac/api/: __init__.py  azure.py  constants.py  gcp.py  vault_api_base.py  vault_api_category.py
hvac/api/auth/: __init__.py  azure.py  gcp.py  github.py  ldap.py  mfa.py
hvac/api/auth_methods/: __init__.py  approle.py  aws.py  azure.py  cert.py  gcp.py  github.py  jwt.py  kerberos.py  kubernetes.py  ldap.py  legacy_mfa.py  mfa.py  oidc.py  okta.py  radius.py  token.py  userpass.py
hvac/api/secrets_engines/: __init__.py  active_directory.py  ad.py  aws.py  azure.py  consul.py  database.py  gcp.py  identity.py  kv.py  kv_v1.py  kv_v2.py  ldap.py  pki.py  rabbitmq.py  ssh.py  totp.py  transform.py  transit.py
hvac/api/secrets_engines/identity/: __init__.py
hvac/api/system_backend/: __init__.py  audit.py  auth.py  capabilities.py  custom_messages.py  health.py  init.py  key.py  leader.py  lease.py  mfa.py  mount.py  namespace.py  passwordpolicy.py  policies.py  policy.py  quota.py  raft.py  seal.py  system_backend_mixin.py  tools.py  wrapping.py
hvac/constants/: approle.py  aws.py  azure.py  client.py  gcp.py  identity.py  totp.py  transit.py
hvac/tests/: test_adapters.py  test_auth_methods.py  test_aws_ec2_methods.py  test_aws_iam_methods.py  test_client.py  test_integration.py  test_integration_v2.py  test_kube_methods.py  test_kubernetes_methods.py  test_system_backend_methods.py  test_tls_integration.py  test_unit.py  util.py  utils.py
hvac/tests/integration_tests/v1/: test_approle.py  test_integration.py  test_system_backend.py
hvac/tests/unit_tests/api/: test_azure.py  test_gcp.py
hvac/tests/unit_tests/v1/: test_approle_routes.py  test_aws_iam_methods.py
hvac/v1/: __init__.py  token_roles.py
hvac/v2/: __init__.py  client.py  token_roles.py
scripts/: bump  install-vault-head.sh  install-vault-release.sh  install-vault.sh  stub_out_api_class.py
scripts/module_templates/: api_class.py.j2  test_integration_api_class.py.j2
test/: README.md  generate.sh  vault-tls.hcl
tests/: utils.py
tests/config_files/: README.md  ca-cert.pem  ca-key.pem  ca.cnf  client-cert.pem  client-key.pem  client.cnf  example.jwt.json  identity_document.p7b  oidc_private.pem  oidc_public.pem  pgp_key.asc.b64  server-cert.csr  server-cert.pem  server-key.pem  server.cnf  ssh-key  ssh-key.pub  vault-doctest.hcl  vault-ha-node1.hcl  vault-ha-node2.hcl  vault-tls.hcl
tests/config_files/vault-ldap/: docker-compose.yml  terraform.tf
tests/doctest/: __init__.py
tests/integration_tests/: conftest.py
tests/integration_tests/api/auth_methods/: test_approle.py  test_aws.py  test_azure.py  test_cert.py  test_gcp.py  test_github.py  test_jwt.py  test_kubernetes.py  test_ldap.py  test_legacy_mfa.py  (+5 more)
tests/integration_tests/v1/: test_approle.py  test_integration.py  test_system_backend.py
tests/scripts/: destroy_vault_ldap.sh  generate_test_cert.sh  init_vault_ldap.sh  install-consul.sh  install-vault.sh
tests/unit_tests/: conftest.py  test_adapters.py  test_token_cache.py
tests/unit_tests/adapters/: test_hvac_adapter.py
tests/unit_tests/api/: test_vault_api_category.py
tests/unit_tests/utils/: test_utils.py
tests/unit_tests/v1/: test_approle_routes.py  test_auth_methods.py  test_aws_ec2_methods.py  test_aws_iam_methods.py  test_client.py  test_gcp_methods.py  test_kubernetes_methods.py  test_system_backend_methods.py
tests/utils/: __init__.py  hvac_integration_test_case.py  mock_github_request_handler.py  mock_ldap_server.py  mock_okta_request_handler.py  server_manager.py
tests/utils/mock_oauth_provider/: app.py  mock_oauth_provider.py  models.py  oauth2.py  routes.py  settings.py
vault/: __init__.py  exceptions.py
vault/tests/: test_integration.py
vault/v1/: __init__.py
(+91 files in other folders)
