[tool.poetry]
name = "hvac"
version = "1.2.1"
description = "HashiCorp Vault API client"
readme = "README.md"
authors = [
    "Ian Unruh <ianunruh@gmail.com>",
    "Jeffrey Hogan <jeff.hogan1@gmail.com>",
]
maintainers = [
    "Brian Scholer",
    "Colin McAllister <colinmca242+hvac@gmail.com>",
    "Mike Adams",
]
repository = "https://github.com/hvac/hvac"
documentation = "https://hvac.readthedocs.io/en/stable/overview.html"
license = "Apache-2.0"
keywords = ["hashicorp", "vault"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "hvac" },
    { include = "tests", format = "sdist" },
    { include = "docs", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.6.2"
pyhcl = "^0.4.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
Werkzeug = "2.0.3"
Authlib = "^1.0.1"
black = "22.6.0"
Flask = "2.0.3"
Flask-SQLAlchemy = "^2.5.1"
flake8 = "4.0.1"
coverage = "6.2"
ipaddress = "^1.0.23"
mock = "^4.0.3"
nose = "^1.3.7"
parameterized = "^0.8.1"
pytest = "7.0.1"
pytest-cov = "^3.0.0"
python-ldap-test = "^0.3.1"
python-jwt = "^3.3.3"
requests-mock = "^1.9.3"
semantic-version = "^2.10.0"
autodocsumm = "0.1.13"
m2r2 = "0.2.5"
Sphinx = "3.1.2"
sphinx-rtd-theme = "0.5.0"
mistune = "0.8.4"
docutils = "<0.18"
packaging = "<23"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
