[tool.poetry]
name = "hvac"
version = "2.0.0"
description = "HashiCorp Vault API client"
readme = "README.md"
authors = [
    "Ian Unruh <ianunruh@gmail.com>",
    "Jeffrey Hogan <jeff.hogan1@gmail.com>",
]
maintainers = [
    "Brian Scholer",
    "Colin McAllister <colinmca242+hvac@gmail.com>",
    "Mike Adams",
]
repository = "https://github.com/hvac/hvac"
documentation = "https://hvac.readthedocs.io/en/stable/overview.html"
license = "Apache-2.0"
keywords = ["hashicorp", "vault"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "hvac" },
    { include = "tests", format = "sdist" },
    { include = "docs", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
pyhcl = { version = "^0.4.4", optional = true }
requests = "^2.27.1"

[tool.poetry.extras]
parser = ["pyhcl"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
Werkzeug = "^2.3.7"
Authlib = "^1.0.1"
black = "22.6.0"
Flask = "^2.2.5"
Flask-SQLAlchemy = "^3.0.5"
flake8 = "^5.0.0"
coverage = "^6.3"
ipaddress = "^1.0.23"
mock = "^4.0.3"
nose = "^1.3.7"
parameterized = "^0.8.1"
pyhcl = "^0.4.4"
pytest = "^7.4.2"
pytest-cov = "^3.0.0"
python-ldap-test = "^0.3.1"
requests-mock = "^1.9.3"
semantic-version = "^2.10.0"
autodocsumm = "0.1.13"
m2r2 = "0.2.5"
Sphinx = "3.1.2"
sphinx-rtd-theme = "0.5.0"
mistune = "0.8.4"
docutils = "<0.18"
packaging = "<24"
jinja2 = "<3.1.0"
greenlet = "^3.0.0"
jwcrypto = "^1.5.0"
typos = "^1.16.11"
pytest-mock = "^3.11.1"

[tool.typos.default.extend-words]
Hashi = "Hashi"
saftey = "saftey"

[tool.typos.files]
extend-exclude = ["*.csr", "tests/config_files/ssh-key"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."docs/conf.py"]
