[tool.poetry]
name = "hvac"
version = "2.3.0"
description = "HashiCorp Vault API client"
readme = "README.md"
authors = [
    "Ian Unruh <ianunruh@gmail.com>",
    "Jeffrey Hogan <jeff.hogan1@gmail.com>",
]
maintainers = [
    "Brian Scholer",
    "Colin McAllister <colinmca242+hvac@gmail.com>",
    "Mike Adams",
]
repository = "https://github.com/hvac/hvac"
documentation = "https://hvac.readthedocs.io/en/stable/overview.html"
license = "Apache-2.0"
keywords = ["hashicorp", "vault"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "hvac" },
    { include = "tests", format = "sdist" },
    { include = "docs", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
pyhcl = { version = "^0.4.4", optional = true }
requests = "^2.27.1"

[tool.poetry.extras]
parser = ["pyhcl"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
Werkzeug = "^3.0.3"
Authlib = "^1.3.1"
black = "22.6.0"
Flask = "^2.2.5"
Flask-SQLAlchemy = "^3.0.5"
flake8 = "^5.0.0"
coverage = "^6.3"
ipaddress = "^1.0.23"
nose = "^1.3.7"
parameterized = "^0.8.1"
pyhcl = "^0.4.4"
pytest = "^7.4.2"
pytest-cov = "^3.0.0"
python-ldap-test = "^0.3.1"
requests-mock = "^1.9.3"
semantic-version = "^2.10.0"
packaging = "<24"
greenlet = "^3.0.0"
jwcrypto = "^1.5.0"
typos = "^1.16.11"
pytest-mock = "^3.11.1"
pytest-xdist = "^3.3.1"

[tool.poetry.group.docs]
optional = true

# this group is for building docs
# when running doctests, the dev group is needed too
[tool.poetry.group.docs.dependencies]
m2r2 = "^0.3.3"
Sphinx = "^7"
sphinx-rtd-theme = "^2"
autodocsumm = "^0.2"
docutils = "^0.20"
jinja2 = "<3.2.0"
# setuptools is not needed for building the docs in RTD,
# but it is needed for running the doctests as an
# undeclared dependency of m2r2.
# https://github.com/CrossNox/m2r2/issues/63
setuptools = "^69"


[tool.pytest.ini_options]
addopts = "-n auto --dist worksteal"

[tool.typos.default.extend-words]
Hashi = "Hashi"
saftey = "saftey"

[tool.typos.files]
extend-exclude = ["*.csr", "tests/config_files/ssh-key"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."docs/conf.py"]
